--- a/index.html
+++ b/index.html
@@ -14,7 +14,24 @@
         </header>
         <main class="main">
             <section class="profile">
-
+                <div class="profile__container">
+                    <img src="./image/image.jpg" alt="" class="profile__avatar">
+                    <!-- 
+                    <button class="profile__avatar-edit" type="button"></button>
+                    -->
+                </div>
+                <div class="profile__info">
+                    <div class="profile__edit">
+                        <h1 class="profile__name">Жак-Ив Кусто</h1>
+                        <button class="profile__button-edit" type="button"></button>
+                    </div>
+                    <p class="profile__profession">Исследователь океана</p>
+                </div>
+                <div class="profile__button">
+                    <button class="profile__button-add" type="button">
+                        <img src="./image/plus.svg" alt="плюс">
+                    </button>
+                </div>
             </section>
         </main>
     </div>
