--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./pages/page.css">
     <title>Mesto</title>
 </head>
+
 <body class="page">
     <div class="page__container">
         <header class="header">
@@ -16,9 +18,6 @@
             <section class="profile">
                 <div class="profile__container">
                     <img src="./image/image.jpg" alt="" class="profile__avatar">
-                    <!-- 
-                    <button class="profile__avatar-edit" type="button"></button>
-                    -->
                 </div>
                 <div class="profile__info">
                     <div class="profile__edit">
@@ -33,7 +32,64 @@
                     </button>
                 </div>
             </section>
+            <section class="elements">
+                <figure class="elements__item">
+                    <img src="./image/kirill-pershin-1088404-unsplash.jpg" alt="фото" class="elements__image">
+                    <div class="elements__info">
+                        <h3 class="elements__paragraph">Карачаевск</h3>
+                        <div class="elements__button-container"><button class="elements__button-like"></button>
+                            <button class="elements__button-like_active"></button>
+                        </div>
+                    </div>
+                </figure>
+                <figure class="elements__item"><img src="./image/kirill-pershin-1404681-unsplash.jpg" alt="фото"
+                        class="elements__image">
+                    <div class="elements__info">
+                        <h3 class="elements__paragraph">Гора Эльбрус</h3>
+                        <div class="elements__button-container"><button class="elements__button-like"></button>
+                            <button class="elements__button-like_active"></button>
+                        </div>
+                    </div>
+                </figure>
+                <figure class="elements__item"><img src="./image/kirill-pershin-1556355-unsplash.jpg" alt="фото"
+                        class="elements__image">
+                    <div class="elements__info">
+                        <h3 class="elements__paragraph">Домбай</h3>
+                        <div class="elements__button-container"><button class="elements__button-like"></button>
+                            <button class="elements__button-like_active"></button>
+                        </div>
+                    </div>
+                </figure>
+                <figure class="elements__item"><img src="./image/kirill-pershin-1404681-unsplash.jpg" alt="фото"
+                        class="elements__image">
+                    <div class="elements__info">
+                        <h3 class="elements__paragraph">Гора Эльбрус</h3>
+                        <div class="elements__button-container"><button class="elements__button-like"></button>
+                            <button class="elements__button-like_active"></button>
+                        </div>
+                    </div>
+                </figure>
+                <figure class="elements__item"><img src="./image/kirill-pershin-1556355-unsplash.jpg" alt="фото"
+                        class="elements__image">
+                    <div class="elements__info">
+                        <h3 class="elements__paragraph">Домбай</h3>
+                        <div class="elements__button-container"><button class="elements__button-like"></button>
+                            <button class="elements__button-like_active"></button>
+                        </div>
+                    </div>
+                </figure>
+                <figure class="elements__item"><img src="./image/kirill-pershin-1088404-unsplash.jpg" alt="фото"
+                        class="elements__image">
+                    <div class="elements__info">
+                        <h3 class="elements__paragraph">Карачаево-Черкессия</h3>
+                        <div class="elements__button-container"><button class="elements__button-like"></button>
+                            <button class="elements__button-like_active"></button>
+                        </div>
+                    </div>
+                </figure>
+            </section>
         </main>
     </div>
 </body>
+
 </html>
