--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                 </figure>
             </section>
         </main>
+        <footer class="footer">
+            <p class="footer__copyright">&copy; Mesto Russia</p>
+        </footer>
     </div>
 </body>
 
