--- a/index.html
+++ b/index.html
@@ -92,6 +92,17 @@
         <footer class="footer">
             <p class="footer__copyright">&copy; Mesto Russia</p>
         </footer>
+        <div class="popup popup_opened">
+            <div class="popup__container">
+                <button class="popup__button-close"></button>
+                <h2 class="popup__heading">Редактировать профиль</h2>
+                <form class="popup__input" name="popup">
+                    <input type="text" class="popup__field" name="name" value="Имя" placeholder="Имя">
+                    <input type="text" class="popup__field" name="profession" value="Профессия" placeholder="Профессия">
+                    <button class="popup__button-save" type="submit" value="Сохранить">Сохранить</button>
+                </form>
+            </div>
+        </div>
     </div>
 </body>
 
