--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <footer class="footer">
             <p class="footer__copyright">&copy; Mesto Russia</p>
         </footer>
-        <div class="popup popup_opened">
+        <div class="popup">
             <div class="popup__container">
                 <button class="popup__button-close"></button>
                 <h2 class="popup__heading">Редактировать профиль</h2>
