--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
         </header>
         <main class="main">
             <section class="profile">
-                <div class="profile__container">
-                    <img src="./image/image.jpg" alt="" class="profile__avatar">
-                </div>
+                <img src="./image/image.jpg" alt="картинка аватара" class="profile__avatar">
                 <div class="profile__info">
                     <div class="profile__edit">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -28,65 +26,65 @@
                 </div>
                 <div class="profile__button">
                     <button class="profile__button-add" type="button">
-                        <img src="./image/plus.svg" alt="плюс">
                     </button>
                 </div>
             </section>
             <section class="elements">
-                <figure class="elements__item">
-                    <img src="./image/kirill-pershin-1088404-unsplash.jpg" alt="фото" class="elements__image">
-                    <div class="elements__info">
-                        <h3 class="elements__paragraph">Карачаевск</h3>
-                        <div class="elements__button-container"><button class="elements__button-like"></button>
-                            <button class="elements__button-like_active"></button>
+                <ul class="elements__list">
+                    <li class="elements__item">
+                        <img src="./image/kirill-pershin-1088404-unsplash.jpg" alt="фото" class="elements__image">
+                        <div class="elements__info">
+                            <h2 class="elements__paragraph">Карачаевск</h2>
+                            <div class="elements__button-container"><button class="elements__button-like"></button>
+                                <button type="button" class="elements__button-like_active"></button>
+                            </div>
                         </div>
-                    </div>
-                </figure>
-                <figure class="elements__item"><img src="./image/kirill-pershin-1404681-unsplash.jpg" alt="фото"
-                        class="elements__image">
-                    <div class="elements__info">
-                        <h3 class="elements__paragraph">Гора Эльбрус</h3>
-                        <div class="elements__button-container"><button class="elements__button-like"></button>
-                            <button class="elements__button-like_active"></button>
+                    </li>
+                    <li class="elements__item">
+                        <img src="./image/kirill-pershin-1404681-unsplash.jpg" alt="фото" class="elements__image">
+                        <div class="elements__info">
+                            <h2 class="elements__paragraph">Гора Эльбрус</h2>
+                            <div class="elements__button-container"><button class="elements__button-like"></button>
+                                <button type="button" class="elements__button-like_active"></button>
+                            </div>
                         </div>
-                    </div>
-                </figure>
-                <figure class="elements__item"><img src="./image/kirill-pershin-1556355-unsplash.jpg" alt="фото"
-                        class="elements__image">
-                    <div class="elements__info">
-                        <h3 class="elements__paragraph">Домбай</h3>
-                        <div class="elements__button-container"><button class="elements__button-like"></button>
-                            <button class="elements__button-like_active"></button>
+                    </li>
+                    <li class="elements__item"><img src="./image/kirill-pershin-1556355-unsplash.jpg" alt="фото"
+                            class="elements__image">
+                        <div class="elements__info">
+                            <h2 class="elements__paragraph">Домбай</h2>
+                            <div class="elements__button-container"><button class="elements__button-like"></button>
+                                <button type="button" class="elements__button-like_active"></button>
+                            </div>
                         </div>
-                    </div>
-                </figure>
-                <figure class="elements__item"><img src="./image/kirill-pershin-1404681-unsplash.jpg" alt="фото"
-                        class="elements__image">
-                    <div class="elements__info">
-                        <h3 class="elements__paragraph">Гора Эльбрус</h3>
-                        <div class="elements__button-container"><button class="elements__button-like"></button>
-                            <button class="elements__button-like_active"></button>
+                    </li>
+                    <li class="elements__item"><img src="./image/kirill-pershin-1404681-unsplash.jpg" alt="фото"
+                            class="elements__image">
+                        <div class="elements__info">
+                            <h2 class="elements__paragraph">Гора Эльбрус</h2>
+                            <div class="elements__button-container"><button class="elements__button-like"></button>
+                                <button type="button" class="elements__button-like_active"></button>
+                            </div>
                         </div>
-                    </div>
-                </figure>
-                <figure class="elements__item"><img src="./image/kirill-pershin-1556355-unsplash.jpg" alt="фото"
-                        class="elements__image">
-                    <div class="elements__info">
-                        <h3 class="elements__paragraph">Домбай</h3>
-                        <div class="elements__button-container"><button class="elements__button-like"></button>
-                            <button class="elements__button-like_active"></button>
+                    </li>
+                    <li class="elements__item"><img src="./image/kirill-pershin-1556355-unsplash.jpg" alt="фото"
+                            class="elements__image">
+                        <div class="elements__info">
+                            <h2 class="elements__paragraph">Домбай</h2>
+                            <div class="elements__button-container"><button class="elements__button-like"></button>
+                                <button type="button" class="elements__button-like_active"></button>
+                            </div>
                         </div>
-                    </div>
-                </figure>
-                <figure class="elements__item"><img src="./image/kirill-pershin-1088404-unsplash.jpg" alt="фото"
-                        class="elements__image">
-                    <div class="elements__info">
-                        <h3 class="elements__paragraph">Карачаево-Черкессия</h3>
-                        <div class="elements__button-container"><button class="elements__button-like"></button>
-                            <button class="elements__button-like_active"></button>
+                    </li>
+                    <li class="elements__item"><img src="./image/kirill-pershin-1088404-unsplash.jpg" alt="фото"
+                            class="elements__image">
+                        <div class="elements__info">
+                            <h2 class="elements__paragraph">Карачаево-Черкессия</h2>
+                            <div class="elements__button-container"><button class="elements__button-like"></button>
+                            </div>
                         </div>
-                    </div>
-                </figure>
+                    </li>
+                </ul>
             </section>
         </main>
         <footer class="footer">
@@ -94,7 +92,7 @@
         </footer>
         <div class="popup">
             <div class="popup__container">
-                <button class="popup__button-close"></button>
+                <button type="button" class="popup__button-close"></button>
                 <h2 class="popup__heading">Редактировать профиль</h2>
                 <form class="popup__input" name="popup">
                     <input type="text" class="popup__field" name="name" value="Имя" placeholder="Имя">
