--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <img src="./image/image.jpg" alt="картинка аватара" class="profile__avatar">
                 <div class="profile__info">
                     <div class="profile__edit">
-                        <h1 class="profile__name">Жак-Ив Кусто 1111111111111111</h1>
+                        <h1 class="profile__name">Жак-Ив Кусто</h1>
                         <button class="profile__button-edit" type="button"></button>
                     </div>
-                    <p class="profile__profession">Исследователь океана 1111111111111111111</p>
+                    <p class="profile__profession">Исследователь океана</p>
                 </div>
                 <div class="profile__button">
                     <button class="profile__button-add" type="button">
@@ -36,7 +36,6 @@
                         <div class="elements__info">
                             <h2 class="elements__paragraph">Карачаевск</h2>
                             <div class="elements__button-container"><button class="elements__button-like"></button>
-                                </button>
                             </div>
                         </div>
                     </li>
@@ -45,7 +44,6 @@
                         <div class="elements__info">
                             <h2 class="elements__paragraph">Гора Эльбрус</h2>
                             <div class="elements__button-container"><button class="elements__button-like"></button>
-                                </button>
                             </div>
                         </div>
                     </li>
@@ -54,7 +52,6 @@
                         <div class="elements__info">
                             <h2 class="elements__paragraph">Домбай</h2>
                             <div class="elements__button-container"><button class="elements__button-like"></button>
-                                </button>
                             </div>
                         </div>
                     </li>
@@ -63,7 +60,6 @@
                         <div class="elements__info">
                             <h2 class="elements__paragraph">Гора Эльбрус</h2>
                             <div class="elements__button-container"><button class="elements__button-like"></button>
-                                </button>
                             </div>
                         </div>
                     </li>
@@ -72,7 +68,6 @@
                         <div class="elements__info">
                             <h2 class="elements__paragraph">Домбай</h2>
                             <div class="elements__button-container"><button class="elements__button-like"></button>
-                                </button>
                             </div>
                         </div>
                     </li>
