--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <img src="./image/image.jpg" alt="картинка аватара" class="profile__avatar">
                 <div class="profile__info">
                     <div class="profile__edit">
-                        <h1 class="profile__name">Жак-Ив Кусто</h1>
+                        <h1 class="profile__name">Жак-Ив Кусто 11111111111111111111111</h1>
                         <button class="profile__button-edit" type="button"></button>
                     </div>
-                    <p class="profile__profession">Исследователь океана</p>
+                    <p class="profile__profession">Исследователь океана 11111111111111111111</p>
                 </div>
                 <div class="profile__button">
                     <button class="profile__button-add" type="button">
